# vocabulary-service-api/src/main/resources/static/openapi/vocabulary-service.yaml
@@ -64,6 +64,10 @@ paths:
 components:
   schemas:
     Vocabulary:
+      type: array
+      items:
+        $ref: '#/components/schemas/word'
+    word:
       title: a Vocabulary
       description: A Vocabulary
       type: object
